err/qubit.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.11.1.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/_pytest'...
Listing './lib/python3.5/site-packages/_pytest/_code'...
Listing './lib/python3.5/site-packages/_pytest/assertion'...
Listing './lib/python3.5/site-packages/_pytest/vendored_packages'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/postgresql'...
Listing './lib/python3.5/site-packages/postgresql/bin'...
Listing './lib/python3.5/site-packages/postgresql/documentation'...
Listing './lib/python3.5/site-packages/postgresql/driver'...
Listing './lib/python3.5/site-packages/postgresql/encodings'...
Listing './lib/python3.5/site-packages/postgresql/lib'...
Listing './lib/python3.5/site-packages/postgresql/port'...
Listing './lib/python3.5/site-packages/postgresql/protocol'...
Listing './lib/python3.5/site-packages/postgresql/python'...
Listing './lib/python3.5/site-packages/postgresql/release'...
Listing './lib/python3.5/site-packages/postgresql/resolved'...
Listing './lib/python3.5/site-packages/postgresql/test'...
Listing './lib/python3.5/site-packages/postgresql/types'...
Listing './lib/python3.5/site-packages/postgresql/types/io'...
Listing './lib/python3.5/site-packages/py'...
Listing './lib/python3.5/site-packages/py/_code'...
Listing './lib/python3.5/site-packages/py/_io'...
Listing './lib/python3.5/site-packages/py/_log'...
Listing './lib/python3.5/site-packages/py/_path'...
Listing './lib/python3.5/site-packages/py/_process'...
Listing './lib/python3.5/site-packages/py/_vendored_packages'...
Listing './lib/python3.5/site-packages/py-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/py_postgresql-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pytest-3.0.3.dist-info'...
Listing './lib/python3.5/site-packages/qubit'...
Listing './lib/python3.5/site-packages/qubit/apis'...
Listing './lib/python3.5/site-packages/qubit/core'...
Listing './lib/python3.5/site-packages/qubit/io'...
Listing './lib/python3.5/site-packages/qubit/io/celery'...
Listing './lib/python3.5/site-packages/qubit/io/postgres'...
Listing './lib/python3.5/site-packages/qubit/io/redis'...
Listing './lib/python3.5/site-packages/qubit/types'...
Listing './lib/python3.5/site-packages/qubit-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/schema'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './share'...
Listing './share/python-wheels'...
